completed HTML and half way through CSS.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="body">
-	<header class="mainheader">
+	<header class="mainHeader">
 		<img src="img/logo.gif">
 
 		<nav><ul>
@@ -62,7 +62,7 @@
 	</aside>
 
 	<footer class="mainFooter">
-		<p>Copyright &copy; BrandonHancock</p>
+		<p>Copyright &copy; <a href="#" title="1stwebdesigner"> BrandonHancock</a></p>
 	</footer>
 
 </body>
